--- a/test1.ui
+++ b/test1.ui
@@ -17,7 +17,7 @@
    <widget class="QFrame" name="frame_form">
     <property name="geometry">
      <rect>
-      <x>40</x>
+      <x>70</x>
       <y>20</y>
       <width>671</width>
       <height>161</height>
@@ -45,7 +45,7 @@
     <widget class="QPushButton" name="cargarBoton">
      <property name="geometry">
       <rect>
-       <x>420</x>
+       <x>500</x>
        <y>80</y>
        <width>121</width>
        <height>41</height>
@@ -58,7 +58,7 @@
     <widget class="QLineEdit" name="srcImg">
      <property name="geometry">
       <rect>
-       <x>440</x>
+       <x>510</x>
        <y>40</y>
        <width>113</width>
        <height>28</height>
@@ -84,14 +84,30 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>330</x>
-       <y>50</y>
+       <x>400</x>
+       <y>40</y>
        <width>81</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
       <string>Imagen:</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="actualizar">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>120</y>
+       <width>111</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>ACTUALIZAR</string>
      </property>
     </widget>
    </widget>
